style.css
html {
  height: 100%;
}

body {
  font-family: 'Roboto', sans-serif;
  color: #404040;
  font-size: 13px;
  margin: 0;
  padding: 0;
  height: 100%;
}

div.page-wrapper {
  display: table;
  position: absolute;
  width: 100%;
  height: 100%;
}

div.content-wrapper {
  display: table-cell;
  vertical-align: middle;
}

div.cell {
  text-align: center;
  padding: 1em;
}

@media (min-height: 800px) {
  div.page-wrapper {
    height: 70%;
  }
}

@media (min-aspect-ratio: 1/1) and (max-height: 600px) {
  div.content {
    display: table;
    margin: auto;
  }

  div.cell {
    display: table-cell;
    vertical-align: middle;
    text-align: left;
  }
}

h1 {
  font-weight: normal;
  font-size: 2.8em;
  margin: 0 0 1em 0;
}

img.face {
  max-width: 250px;
  height: auto;
  border-radius: 6px;
}

ul.links i.fa {
  font-size: 2.2em;
  padding-right: 0.3em;
}

ul.links {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

ul.links li {
  margin-bottom: 0.2em;
}

ul.links a {
  font-size: 1.2em;
  color: #404040;
  text-decoration: none;
}

ul.links a:hover {
  text-decoration: underline;
}

